# api-authentication

./: .gitignore  LICENSE  README.md
backend/django/: pyproject.toml
backend/django/api/core/: settings.py  urls.py  views.py
backend/fastapi/: pyproject.toml
backend/fastapi/core/: settings.py
backend/fastapi/models/: users.py
backend/fastapi/schemas/: users.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Login.js
